# todo-website

Phase-1/: CLAUDE.md  README.md
Phase-1/.claude-code-router/: config.json
Phase-1/src/: __init__.py  cli.py  main.py  manager.py  models.py
Phase-1/todo_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Phase-2/: CLAUDE.md  RUNNING_GUIDE.md  requirements.txt  run_app.bat  start_dev_stack.bat  update_api.js
Phase-2/.claude-code-router/: config.json
Phase-2/.spec-kit/: config.yaml
Phase-2/backend/: .env.example  README.md  app.py  config.py  db.py  (+40 more)
Phase-2/backend/backend/: CLAUDE.md  db.py  models.py  pyproject.toml  requirements.txt
Phase-2/backend/backend/alembic/: env.py
Phase-2/backend/backend/alembic/versions/: 0001_initial_migration.py
Phase-2/backend/backend/dependencies/: __init__.py
Phase-2/backend/backend/routes/: auth.py  tasks.py
Phase-2/backend/backend/services/: auth_service.py
Phase-2/backend/backend/utils/: __init__.py  auth.py  validation.py
Phase-3/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  todo_app.py
Phase-3/.claude-code-router/: config.json
Phase-3/.specify/history/prompts/todo/: 1-break-down-todo-implementation-tasks.tasks.prompt.md
Phase-3/.specify/specs/todo/: plan.md
Phase-3/backend/: .env.example  __init__.py  alembic.ini  db.py  main.py
Phase-3/backend/dependencies/: auth.py  database.py
Phase-3/backend/schemas/: auth.py  tasks.py
Phase-3/backend/services/: __init__.py  task_service.py
Phase-3/backend/utils/: auth.py
Phase-3/frontend/: __init__.py  package-lock.json
Phase-3/frontend/app/: layout.tsx
Phase-3/frontend/app/dashboard/: layout.tsx
Phase-3/history/adr/: 001-frontend-technology-stack.md  002-backend-technology-stack.md  003-database-choice.md  004-authentication-approach.md
Phase-3/history/prompts/1-todo-web-app/: 1-todo-web-app-spec.spec.prompt.md  2-todo-web-app-plan.plan.prompt.md  3-todo-web-app-tasks.tasks.prompt.md
Phase-3/specs/: overview.md
Phase-3/specs/1-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
Phase-3/specs/features/: task-crud.md
(+40 files in other folders)
